--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,12 @@
 <head>
 	<!--build:css css/styles.min.css-->
 	<link href="css/styles.css" rel="stylesheet" />
-	<link href="css/h1styles.css" rel="stylesheet" />
 	<!--endbuild-->
 </head>
 <body>
 	<h1>hello world!!</h1>
 	<!--build:js js/main.min.js-->
-	<script src="js/hello.js"></script>
-	<script src="js/world.js"></script>
+	<script src="js/main.js"></script>
 	<!--endbuild-->
 </body>
 </html>
