--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,47 @@
+<!doctype html>
 <html>
-<head>
-	<!--build:css css/styles.min.css-->
-	<link href="css/styles.css" rel="stylesheet" />
-	<!--endbuild-->
-</head>
-<body>
-	<h1>hello world!!</h1>
-	<!--build:js js/main.min.js-->
-	<script src="js/main.js"></script>
-	<!--endbuild-->
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title></title>
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+		<!--build:css css/styles.min.css-->
+		<link href="css/normalize.css" rel="stylesheet" />
+		<link href="css/styles.css" rel="stylesheet" />
+		<!--endbuild-->
+	</head>
+
+	<body>
+	<header></header>
+
+	<main>
+
+		<section>
+			<div class="wrapper">
+				<h1>Hello world...</h1>
+				<div id="alpha">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui reiciendis facere, ipsa error quisquam voluptate non tempora quod. Recusandae quo ea quod iste, dignissimos consequatur.</div>
+				<div id="omega">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed nihil magnam adipisci, nam mollitia at aspernatur id voluptates veniam aliquam, fuga quam impedit fugiat libero!</div>
+			</div>
+		</section>
+
+		<section>
+			<div class="flex">
+				<div class="box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, earum.</div>
+				<div class="box">Eos quisquam deserunt obcaecati repudiandae rem, impedit porro qui quis!</div>
+				<div class="box">Error cumque voluptatem quibusdam, placeat, tempore soluta perspiciatis! Dolores, temporibus.</div>
+				<div class="box">Error nulla, deserunt ut sint a accusantium dicta aspernatur modi.</div>
+			</div>
+		</section>
+	</main>
+
+	<footer></footer>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<!--build:js js/main.min.js-->
+		<script src="js/main.js"></script>
+		<!--endbuild-->
+	</body>
 </html>
