--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-		<!--build:css css/styles.min.css-->
-		<link href="css/normalize.css" rel="stylesheet" />
-		<link href="css/styles.css" rel="stylesheet" />
-		<!--endbuild-->
+		<!-- inject:css -->
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/styles.css">
+		<!-- endinject -->
 	</head>
 
 	<body>
@@ -21,7 +21,7 @@
 
 		<section>
 			<div class="wrapper">
-				<h1>Hello world...</h1>
+				<h1>Hello world?!""!</h1>
 				<div id="alpha">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui reiciendis facere, ipsa error quisquam voluptate non tempora quod. Recusandae quo ea quod iste, dignissimos consequatur.</div>
 				<div id="omega">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed nihil magnam adipisci, nam mollitia at aspernatur id voluptates veniam aliquam, fuga quam impedit fugiat libero!</div>
 			</div>
@@ -32,7 +32,7 @@
 				<div class="box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, earum.</div>
 				<div class="box">Eos quisquam deserunt obcaecati repudiandae rem, impedit porro qui quis!</div>
 				<div class="box">Error cumque voluptatem quibusdam, placeat, tempore soluta perspiciatis! Dolores, temporibus.</div>
-				<div class="box">Error nulla, deserunt ut sint a accusantium dicta aspernatur modi.</div>
+				<div class="box">Error nulla, deserunt ut sint a accusantium dicta aspernatur modii.</div>
 			</div>
 		</section>
 	</main>
@@ -40,8 +40,9 @@
 	<footer></footer>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<!--build:js js/main.min.js-->
+
+		<!--inject:js-->
 		<script src="js/main.js"></script>
-		<!--endbuild-->
+		<!--endinject-->
 	</body>
 </html>
