Add load-plugins, size, newer; Fix/improve styles + build

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 
 		<!-- inject:css -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="styles/normalize.css">
+		<link rel="stylesheet" href="styles/styles.css">
 		<!-- endinject -->
 	</head>
 
@@ -21,7 +21,7 @@
 
 		<section>
 			<div class="wrapper">
-				<h1>Hello world?!""!</h1>
+				<h1>Hello world?!!</h1>
 				<div id="alpha">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui reiciendis facere, ipsa error quisquam voluptate non tempora quod. Recusandae quo ea quod iste, dignissimos consequatur.</div>
 				<div id="omega">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed nihil magnam adipisci, nam mollitia at aspernatur id voluptates veniam aliquam, fuga quam impedit fugiat libero!</div>
 			</div>
@@ -42,7 +42,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
 		<!--inject:js-->
-		<script src="js/main.js"></script>
+		<script src="scripts/main.js"></script>
 		<!--endinject-->
 	</body>
 </html>
