vendors/vendor.js and delete old test files

--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
 		<!--inject:js-->
+		<script src="scripts/vendors/vendor.js"></script>
 		<script src="scripts/main.js"></script>
 		<!--endinject-->
 	</body>
