--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="no-js">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -56,7 +56,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
 		<!--inject:js-->
-		<script src="scripts/vendors/vendor.js"></script>
+		<script src="scripts/vendors/modernizr.js"></script>
 		<script src="scripts/main.js"></script>
 		<!--endinject-->
 	</body>
