Change styles/* to use the 7-1 pattern
http://sass-guidelin.es/#the-7-1-pattern

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 		<!-- endinject -->
 
 		<!-- main user styles -->
-		<link rel="stylesheet" href="styles/styles.css">
+		<link rel="stylesheet" href="styles/main.css">
 	</head>
 
 	<body>
@@ -20,23 +20,26 @@
 		<!-- endinject -->
 		<header>
 			<h1>Hello world!</h1>
-			<p>If this looks like a goddamn beach then material-colors and Bourbon's gradient mixin are to blame.</p>
+			<p>This background is using Bourbon's gradient mixin</p>
 		</header>
 
 		<main>
 			<section>
 				<div class="wrapper">
 					<div>
-						<p>These divs are 50/50...</p>
+						<p>Divs using neat's grid</p>
 					</div>
+          <div>
+            <p>Should be 3 cols</p>
+          </div>
 					<div>
-						<p>...thanks to Neat's grid.</p>
+						<p>eyy look at us</p>
 					</div>
 				</div>
 
 				<div class="flex">
 					<div class="box">
-						<p>These divs are using Bourbon's flexbox mixin.</p>
+						<p>Divs using Bourbon's flexbox mixin</p>
 					</div>
 					<div class="box">
 						<p>There should be a fancy svg in the footer which has been injected into a sprite sheet and used.</p>
