--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,8 @@
 			<h1>Hello world!</h1>
 			<p>This background is using Bourbon's gradient mixin</p>
 		</header>
+    
+    <div class="col-md-8 col-md-offset-2" style="border: 1px solid black; margin-bottom: 20px"><p>eeeeeyyyy boostrep</p><button class="btn btn-success">u did it</button></div>
 
 		<main>
 			<section>
